<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SettingsActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/activity_bottom_nav_helper_home" />

    <TextView
        android:id="@+id/myOverview"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="Settings"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="342dp"
        android:layout_height="212dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/btn_selected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/reg_edittext_style"
            android:gravity="center"
            android:text="Apply for additional accounts" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="183dp"
                android:layout_height="126dp"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/businessApply"
                    android:layout_width="159dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_selected"
                    android:fontFamily="monospace"
                    android:text="@string/acc3"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/savingsApply"
                    android:layout_width="159dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_selected"
                    android:fontFamily="monospace"
                    android:text="@string/acc4"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/pensionApply"
                    android:layout_width="159dp"
                    android:layout_height="55dp"
                    android:background="@drawable/btn_selected"
                    android:fontFamily="monospace"
                    android:text="@string/acc5"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="133dp"
                android:layout_height="126dp"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/businessCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_check" />

                <ImageView
                    android:id="@+id/savingsCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_check" />

                <ImageView
                    android:id="@+id/pensionCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_check" />

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

    <Button
        android:id="@+id/userSettings"
        android:layout_width="131dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/reg_btn_style"
        android:text="User settings"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.149" />


</androidx.constraintlayout.widget.ConstraintLayout>